--- a/404.html
+++ b/404.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>404 Error | 3kh0</title>
+    <title>404 Error | Study Lite</title>
   </head>
   <body>
     <h1>404 Error</h1>
-    <p>Page not found. Whomp whomp :(</p>
+    <p>Page not found. Womp womp :(</p>
     <a href="/">Go to Homepage</a>
   </body>
 </html>
