--- a/misc.html
+++ b/misc.html
@@ -2,8 +2,7 @@
 <html lang="en-US">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <title>Miscellaneous | 3kh0</title>
+    <title>Miscellaneous | Study Lite</title>
     <style>
       .text-center {
         text-align: center;
@@ -11,7 +10,7 @@
     </style>
   </head>
   <body style="background-color: #121212; color: #ffffff; font-family: sans-serif; margin: 0; padding: 0; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh;">
-    <h2 style="text-align: center; font-size: 2em; margin-bottom: 1em;">Miscellaneous stuff</h2>
+    <h2 style="text-align: center; font-size: 2em; margin-bottom: 1em;">Miscellaneous Stuff</h2>
     <div style="width: 100%; max-width: 600px; margin-bottom: 2em;">
       <div>
         <h1>about:blank</h1>
