--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="/misc.html" style="text-decoration: none;"><button style="cursor: pointer; background-color: #b625cc; border: none; color: white; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; border-radius: 20px; margin-top: 5px;">Tools and settings</button></a>
     </p>
     <p style="text-align: center; max-width: 600px; margin: 20px auto;">
-        &copy; 3kh0, 2024. All rights reserved." style="color: #22c55e;"<br /><br />
+        "&copy; 3kh0, 2024. All rights reserved."<br /><br />
     </p>
   </body>
 </html>
