--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <meta property="og:site_name" content="study-lite.netlify.app" />
-    <meta property="og:description" content="Welcome to Study Lite, a fast way to study for tests." />
     <meta name="description" content="Welcome to Study Lite, a fast way to study for tests." />
     <meta name="author" content="Flaw5252" />
     <meta charset="UTF-8" />
@@ -13,7 +11,6 @@
     <h1 style="font-size: 3em; text-align: center;">
       Study Lite
     </h1>
-    <span id="subtitle" style="font-size: 1.5em;">...</span>
     <p style="text-align: center; max-width: 600px; margin: 20px auto;">
       Welcome to Study Lite, a fast way to study for tests.<br />
       <a href="/projects.html" style="text-decoration: none;"><button style="cursor: pointer; background-color: #22c55e; border: none; color: white; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; border-radius: 20px; margin-top: 20px;">Start playing!</button></a><br />
@@ -21,7 +18,7 @@
       <a href="/misc.html" style="text-decoration: none;"><button style="cursor: pointer; background-color: #b625cc; border: none; color: white; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; border-radius: 20px; margin-top: 5px;">Tools and settings</button></a>
     </p>
     <p style="text-align: center; max-width: 600px; margin: 20px auto;">
-        "&copy; 3kh0, 2024. All rights reserved."<br /><br />
+        &copy; 3kh0, 2024. All rights reserved.
     </p>
   </body>
 </html>
